# tang-uart

./: .gitignore  README.md  justfile  pyproject.toml
constraints/: tangnano20k.cst
rtl/: baud_generator.sv  button.sv  counter.sv  queue.sv  stack.sv  top.sv  uart.sv
tb/: __init__.py  test_baud_generator.py  test_queue.py  test_top.py  test_uart.py  test_uart_receiver.py  test_uart_transmitter.py
tools/: visualize_pnr.py
