[project]
name = "tang-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "basedpyright>=1.39.7",
    "cocotb>=2.0.1",
    "copra",
    "pytest>=9.0.3",
]

[tool.basedpyright]
typeCheckingMode = "basic"


[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tb"]

[tool.uv.sources]
copra = { git = "https://github.com/cocotb/copra" }
